--- a/lib/pag_seguro/checkout.xml.haml
+++ b/lib/pag_seguro/checkout.xml.haml
@@ -25,21 +25,20 @@
         - if item.weight.present?
           %weight= item.weight
 
-  - if payment_method_configs.any?
+  - if payment_method_config.present?
     %paymentMethodConfigs
-      - payment_method_configs.each do |payment_method_config|
-        %paymentMethodConfig
-          - if payment_method_config.payment_method.present?
-            %paymentMethod
-              %group= payment_method_config.payment_method
-          - if payment_method_config.configs.any?
-            %configs
-              - payment_method_config.configs.each do |config|
-                %config
-                  - if config.key.present?
-                    %key= config.key
-                  - if config.value.present?
-                    %value= config.value
+      %paymentMethodConfig
+        - if payment_method_config.payment_method.present?
+          %paymentMethod
+            %group= payment_method_config.payment_method
+        - if payment_method_config.configs.any?
+          %configs
+            - payment_method_config.configs.each do |config|
+              %config
+                - if config.key.present?
+                  %key= config.key
+                - if config.value.present?
+                  %value= config.value
 
   - if sender.present?
     %sender
